...

struct APIHelper {
    var baseUrl = "https://v6.exchangerate-api.com/v6/"
    let apiKey = "b6d2c7ea0227756500970b96"
    var baseCurrency = "USD"
    var availableCurrencies = [
        "AED",
        "AFN",
        "ALL",
        "AMD",
        "ANG",
        "AOA",
        "ARS",
        "AUD",
        "AWG",
        "AZN",
        "BAM",
        "BBD",
        "BDT",
        "BGN",
...
